--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 -------------------------------------------------------------------*/
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700');
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,700,900');
-@import url("../fonts/spacehost.css");
+@import url("spacehost.css");
 
 /*------------------------------------------------------------------
 	1. General Styles
